--- a/Store.Web/Store.Web.csproj
+++ b/Store.Web/Store.Web.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\domain\Store\Store.csproj" />
     <ProjectReference Include="..\infrastructure\Store.Memory\Store.Memory.csproj" />
+    <ProjectReference Include="..\Store.Messages\Store.Messages.csproj" />
   </ItemGroup>
 
 </Project>
