--- a/domain/Store.Tests/Store.Tests.csproj
+++ b/domain/Store.Tests/Store.Tests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\application\Store.Web.App\Store.Web.App.csproj" />
     <ProjectReference Include="..\Store\Store.csproj" />
   </ItemGroup>
 
